<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/collapsing_banner_height"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/app_name">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/banner_list"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/banner_pic_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_collapseMode="parallax"
                app:layout_anchor="@id/app_bar"
                app:layout_anchorGravity="top"
                tools:listitem="@layout/layout_banner_picture" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/food_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            tools:listitem="@layout/layout_food_item" />
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="pin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true"
                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pizza"
                    android:layout_width="@dimen/chip_width"
                    android:layout_height="wrap_content"
                    style="@style/chip_filter"
                    android:text="@string/chip_pizza"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_combo"
                    android:layout_width="@dimen/chip_width"
                    android:layout_height="wrap_content"
                    style="@style/chip_filter"
                    android:text="@string/chip_combo"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_snacks"
                    android:layout_width="@dimen/chip_width"
                    android:layout_height="wrap_content"
                    style="@style/chip_filter"
                    android:text="@string/chip_snacks"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_drinks"
                    android:layout_width="@dimen/chip_width"
                    android:layout_height="wrap_content"
                    style="@style/chip_filter"
                    android:text="@string/chip_drinks"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_desserts"
                    android:layout_width="@dimen/chip_width"
                    android:layout_height="wrap_content"
                    style="@style/chip_filter"
                    android:text="@string/chip_desserts"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sauces"
                    android:layout_width="@dimen/chip_width"
                    android:layout_height="wrap_content"
                    style="@style/chip_filter"
                    android:text="@string/chip_sauces"/>


            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

    </androidx.appcompat.widget.Toolbar>



    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/food_list"
        app:layout_anchorGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loading_failed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_retry"
        android:visibility="gone"
        app:layout_anchor="@id/food_list"
        app:layout_anchorGravity="bottom|center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>